# rucio-connector

./: .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  config.py  docker-compose.yaml  logger.py  main.py  poetry.toml  pyproject.toml  requirements.txt
api/: rucio.py
docker/: Dockerfile  docker-compose.yaml
jenkins/: docker.Jenkinsfile
tests/: test_main.py
