[project]
package-mode = false
name = "rucio-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "ettore-infn",email = "ettore.serra@ba.infn.it"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
packages = [{ include = "app" }]
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "rucio (>=37.5.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn.main:app"
