[tool.poetry]
name = "rucio-connector"
version = "0.1.0"
description = "Component to exchange information between the PaaS orchestrator and Rucio"
authors = ["Ettore Serra <ettore.serra@ba.infn.it>", "Giovanni Savarese <giovanni.savarese@ba.infn.it>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
pydantic  = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
rucio = ">=37.5.0,<38.0.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
